<resources>
    <string name="app_name">tasklist</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Senha</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="enter_label">Entrar</string>
    <string name="screen_login_content_description">imagem da tela de login</string>
    <string name="create_your_account">Crie sua conta</string>
    <string name="create_account_button">Criar conta</string>
    <string name="send">Enviar</string>
    <string name="first_access">Primeiro acesso</string>
    <string name="password_confirmation">Confirmar senha</string>
    <string name="exit">Sair</string>
    <string name="required_email">E-mail obrigatório</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="send_link_email">Acabamos de enviar o link de recuperação para o seu e-mail</string>
    <string name="authentication_failed">Falha na autenticação</string>
    <string name="created_account">Conta criada</string>
    <string name="required_password">Senha é obrigatória</string>
    <string name="required_minimun_length_password">A senha precisa ter no minímo 6 caracteres</string>
    <string name="different_password">Senhas diferentes</string>
    <string name="add_button">add_button</string>
    <string name="task_list_label">Lista de Tarefas</string>
    <string name="question_task_label">O que deseja fazer?</string>
    <string name="date_label">Data:</string>
    <string name="date_not_defined">Data não definida</string>
    <string name="type_here">Digite aqui</string>
    <string name="create_task">Criar tarefa</string>
    <string name="save">Salvar</string>
    <string name="fill_fields">Preencha os campos</string>
    <string name="edit">Editar</string>
</resources>